<resources>
    <string name="app_name">CarPoolingApp</string>
    <string name="scroll_items">Scroll Items</string>
    <string name="profile_picture">profile Picture</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="rates">
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>

    <string-array name="seats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="car_owner_page">Car Owner page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>